--- a/src/styles/components/main.sass
+++ b/src/styles/components/main.sass
@@ -5,3 +5,9 @@
     padding: 0
     box-sizing: border-box
     font-family: variables.$font-stack
+
+body
+   background-color: variables.$bady-bg-color 
+
+a, svg
+    transition: .4s
