--- a/src/styles/components/variables.sass
+++ b/src/styles/components/variables.sass
@@ -1,1 +1,9 @@
 $font-stack: "Helvetica"
+$text-color:#fff
+$text-color-secondary: #a6a6a6
+$bady-bg-color: #2b2736
+$bg-color: #111
+$bg-color-secondary: #1d1d1d
+$conatainer-border-radius: 5px
+$card-border-radius: 5px
+$gradient: linear-gradient(90deg, #1cf11c 0%, #0653fa 100%)
