colocando sombras e mundo variaveis

--- a/src/styles/components/maincontent.sass
+++ b/src/styles/components/maincontent.sass
@@ -7,3 +7,4 @@
     border-radius: variables.$conatainer-border-radius
     color: variables.$text-color
     padding: 3rem
+    box-shadow: #04fff2  -8px 8px 19px 
