--- a/src/styles/components/sidebar.sass
+++ b/src/styles/components/sidebar.sass
@@ -13,6 +13,7 @@
     position: relative
     padding: 3rem 
     color: variables.$text-color
+    box-shadow: #03f8ec  -8px 8px 19px
 
     img
         max-width: 70%
@@ -30,6 +31,7 @@
 
     .btn
         @include mixins.btn
+        font-size: 12px
         
 
 
