adicionando componente rede social

--- a/src/styles/mixins.sass
+++ b/src/styles/mixins.sass
@@ -1,4 +1,9 @@
-@use './variables'
+@use "../../styles/components/variables"
+
+@mixin center 
+    display: flex
+    justify-content: center
+    align-items: center
 
 
 @mixin btn 
