--- a/src/styles/components/socialnet.sass
+++ b/src/styles/components/socialnet.sass
@@ -1,5 +1,5 @@
-@use "../../styles/components/variables"
-@use '../mixins'
+@use "./variables"
+@use "./mixins"
 
 #socialnet 
     @include mixins.center
@@ -8,8 +8,8 @@
 
     .social-btn
         padding: .6rem
-        background-color: variables.$bg-color-secundary 
-        border-radius: variables.$card-border-raius 
+        background-color: variables.$bg-color-secondary 
+        border-radius: variables.$card-border-radius 
         color: #333 
         font-size: 1.3rem
         @include mixins.center 
@@ -19,3 +19,8 @@
 
         #github
             color: #111
+
+        :hover 
+            background: variables.$gradient
+            > svg
+                color: variables.$text-color
