--- a/src/styles/components/socialnet.sass
+++ b/src/styles/components/socialnet.sass
@@ -1,7 +1,7 @@
 @use "./variables"
 @use "./mixins"
 
-#socialnet 
+#social-net 
     @include mixins.center
     gap: 1rem
     margin: 1rem 0
@@ -10,17 +10,16 @@
         padding: .6rem
         background-color: variables.$bg-color-secondary 
         border-radius: variables.$card-border-radius 
-        color: #333 
         font-size: 1.3rem
         @include mixins.center 
 
-        #linkedin
-            color: #0072b1
+    #linkedin
+        color: #0072b1
 
-        #github
-            color: #111
+    #github
+        color: #d4d1d1
 
-        :hover 
-            background: variables.$gradient
-            > svg
-                color: variables.$text-color
+    :hover 
+        background: variables.$gradient
+        > svg
+            color: variables.$text-color
